2007-12-21  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Set the pipeline state to NULL before disposing (#495410).

2007-12-21  Luca Cavalli  <lcavalli@svn.gnome.org>

	* src/sj-main.c: (set_message_area_text_and_icon):
	Escape album title and artist in message area (#504862).

2007-12-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.0.

2007-12-20  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/sj-message-area.[ch]:
	* src/gedit-message-area.[ch]:
	* src/sj-main.c:
	Use pristine message area widget from gedit instead of renaming.

2007-12-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Actually make pressing Submit do something useful.

2007-12-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-structures.h:
	* libjuicer/sj-metadata-musicbrainz.c:
	* libjuicer/sj-metadata-cdtext.c:
	Add a source enumeration.
	
	* src/Makefile.am:
	* src/sj-message-area.[ch]:
	Add a message area/cluebar widget, from gedit.
	
	* src/sj-main.c:
	* data/sound-juicer.glade:
	If the data is from FreeDB, show a cluebar telling the user so
	they can add the TOC to Musicbrainz.

	Thanks to Luca Cavalli for this, closing #452047.  This has a
	redraw bug, but we'll fix that.

2007-12-19  Rob Bradford  <rob@robster.org.uk>

	* src/sj-main.c: (selected_album_changed), (multiple_album_dialog)
	Make the continue button sensitive iff an album is selected. Also
	check that there is a selection before trying to retrieve the contents
	of the selected row.
	Fixes bug #500815.

2007-12-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-structures.h:
	* src/sj-extracting.c:
	* src/sj-prefs.c:
	Remove TrackData->iter, write better code instead.

2007-12-11  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer-48.png:
	* data/Makefile.am:
	Install 48px PNG icon (thanks Andreas Nilsson, #502933).

2007-12-07  Rob Bradford  <rob@robster.org.uk>

	* data/sound-juicer.glade: