@@ -1,3 +1,9 @@
+2007-12-22  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.[ch]:
+	* src/sj-prefs.c:
+	Make the gconf callbacks static, and fix some cast/type-punned warnings.
+
 2007-12-21  Ross Burton  <ross@burtonini.com>
 
 	* libjuicer/sj-extractor.c:
